// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render successfully when add card form is closed 1`] = `
<DocumentFragment>
  <div
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="test-droppable"
  >
    <div
      aria-describedby="rbd-hidden-text-0-hidden-text-0"
      class="shadow bg-trello-gray-100 rounded-md w-80 m-1 px-2 py-2 flex flex-col list-wrapper"
      data-rbd-drag-handle-context-id="0"
      data-rbd-drag-handle-draggable-id="1"
      data-rbd-draggable-context-id="0"
      data-rbd-draggable-id="1"
      draggable="false"
      role="button"
      tabindex="0"
    >
      <div
        class="flex items-start select-none cursor-pointer p-1"
      >
        <h2
          class="flex-1 px-1 text-trello-gray-300 font-semibold break-all"
        >
          List 1
        </h2>
        <button
          class="hover:bg-trello-gray-500 p-1 ml-1.5 rounded-ibsm"
        >
          <svg
            class="text-trello-gray-200"
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </button>
      </div>
      <div
        class="overflow-y-auto overflow-x-hidden min-h-4 pb-1.5"
        data-rbd-droppable-context-id="0"
        data-rbd-droppable-id="1"
        id="1"
      >
        <div
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="1"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="1"
          data-testid="list-card-container"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
          >
            <p>
              Card 1
            </p>
            <div
              class="flex items-center space-x-2 text-gray-600 pt-2"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="3.06"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="8.29"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="13.53"
                />
                <rect
                  height="2.18"
                  width="15.81"
                  x="0.46"
                  y="18.76"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="2"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="2"
          data-testid="list-card-container"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
          >
            <p>
              Card 2
            </p>
            <div
              class="flex items-center space-x-2 text-gray-600 pt-2"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="3.06"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="8.29"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="13.53"
                />
                <rect
                  height="2.18"
                  width="15.81"
                  x="0.46"
                  y="18.76"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="3"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="3"
          data-testid="list-card-container"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
          >
            <p>
              Card 3
            </p>
            <div
              class="flex items-center space-x-2 text-gray-600 pt-2"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="3.06"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="8.29"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="13.53"
                />
                <rect
                  height="2.18"
                  width="15.81"
                  x="0.46"
                  y="18.76"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col transition-height ease-in-out duration-100 h-min"
      >
        <div
          class="flex hover:bg-trello-gray-500 rounded-ibsm items-center cursor-pointer text-trello-gray-600 p-1 mt-1"
          data-testid="add-card-prompt-container"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
          <h2
            class="flex-1 ml-1.5"
          >
            Add a card
          </h2>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`List should render successfully when add card form is open 1`] = `
<DocumentFragment>
  <div
    data-rbd-droppable-context-id="1"
    data-rbd-droppable-id="test-droppable"
  >
    <div
      aria-describedby="rbd-hidden-text-1-hidden-text-7"
      class="shadow bg-trello-gray-100 rounded-md w-80 m-1 px-2 py-2 flex flex-col list-wrapper"
      data-rbd-drag-handle-context-id="1"
      data-rbd-drag-handle-draggable-id="1"
      data-rbd-draggable-context-id="1"
      data-rbd-draggable-id="1"
      draggable="false"
      role="button"
      tabindex="0"
    >
      <div
        class="flex items-start select-none cursor-pointer p-1"
      >
        <h2
          class="flex-1 px-1 text-trello-gray-300 font-semibold break-all"
        >
          List 1
        </h2>
        <button
          class="hover:bg-trello-gray-500 p-1 ml-1.5 rounded-ibsm"
        >
          <svg
            class="text-trello-gray-200"
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </button>
      </div>
      <div
        class="overflow-y-auto overflow-x-hidden min-h-4 pb-1.5"
        data-rbd-droppable-context-id="1"
        data-rbd-droppable-id="1"
        id="1"
      >
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-7"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="1"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="1"
          data-testid="list-card-container"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
          >
            <p>
              Card 1
            </p>
            <div
              class="flex items-center space-x-2 text-gray-600 pt-2"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="3.06"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="8.29"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="13.53"
                />
                <rect
                  height="2.18"
                  width="15.81"
                  x="0.46"
                  y="18.76"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-7"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="2"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="2"
          data-testid="list-card-container"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
          >
            <p>
              Card 2
            </p>
            <div
              class="flex items-center space-x-2 text-gray-600 pt-2"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="3.06"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="8.29"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="13.53"
                />
                <rect
                  height="2.18"
                  width="15.81"
                  x="0.46"
                  y="18.76"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-7"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="3"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="3"
          data-testid="list-card-container"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
          >
            <p>
              Card 3
            </p>
            <div
              class="flex items-center space-x-2 text-gray-600 pt-2"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="3.06"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="8.29"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="13.53"
                />
                <rect
                  height="2.18"
                  width="15.81"
                  x="0.46"
                  y="18.76"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col transition-height ease-in-out duration-100 h-min"
      >
        <div
          class="flex hover:bg-trello-gray-500 rounded-ibsm items-center cursor-pointer text-trello-gray-600 p-1 mt-1"
          data-testid="add-card-prompt-container"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
          <h2
            class="flex-1 ml-1.5"
          >
            Add a card
          </h2>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`List should render successfully when add card form is open 2`] = `
<DocumentFragment>
  <div
    data-rbd-droppable-context-id="1"
    data-rbd-droppable-id="test-droppable"
  >
    <div
      aria-describedby="rbd-hidden-text-1-hidden-text-7"
      class="shadow bg-trello-gray-100 rounded-md w-80 m-1 px-2 py-2 flex flex-col list-wrapper"
      data-rbd-drag-handle-context-id="1"
      data-rbd-drag-handle-draggable-id="1"
      data-rbd-draggable-context-id="1"
      data-rbd-draggable-id="1"
      draggable="false"
      role="button"
      tabindex="0"
    >
      <div
        class="flex items-start select-none cursor-pointer p-1"
      >
        <h2
          class="flex-1 px-1 text-trello-gray-300 font-semibold break-all"
        >
          List 1
        </h2>
        <button
          class="hover:bg-trello-gray-500 p-1 ml-1.5 rounded-ibsm"
        >
          <svg
            class="text-trello-gray-200"
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </button>
      </div>
      <div
        class="overflow-y-auto overflow-x-hidden min-h-4 pb-1.5"
        data-rbd-droppable-context-id="1"
        data-rbd-droppable-id="1"
        id="1"
      >
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-7"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="1"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="1"
          data-testid="list-card-container"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
          >
            <p>
              Card 1
            </p>
            <div
              class="flex items-center space-x-2 text-gray-600 pt-2"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="3.06"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="8.29"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="13.53"
                />
                <rect
                  height="2.18"
                  width="15.81"
                  x="0.46"
                  y="18.76"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-7"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="2"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="2"
          data-testid="list-card-container"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
          >
            <p>
              Card 2
            </p>
            <div
              class="flex items-center space-x-2 text-gray-600 pt-2"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="3.06"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="8.29"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="13.53"
                />
                <rect
                  height="2.18"
                  width="15.81"
                  x="0.46"
                  y="18.76"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-7"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="3"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="3"
          data-testid="list-card-container"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
          >
            <p>
              Card 3
            </p>
            <div
              class="flex items-center space-x-2 text-gray-600 pt-2"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="3.06"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="8.29"
                />
                <rect
                  height="2.18"
                  width="23.08"
                  x="0.46"
                  y="13.53"
                />
                <rect
                  height="2.18"
                  width="15.81"
                  x="0.46"
                  y="18.76"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col transition-height ease-in-out duration-200 h-min"
        >
          <textarea
            class="resize-none w-full box-border outline-none shadow bg-white rounded-md p-2 my-1.5"
            data-testid="add-card-input"
            placeholder="Type something..."
          />
          <div
            class="flex items-center mt-1.5"
          >
            <button
              class="py-2 px-3 bg-trello-green-100 hover:bg-trello-green-200 text-white transition ease-in duration-200 text-center text-base shadow-md rounded-md"
              type="button"
            >
              Add Card
            </button>
            <svg
              class="text-trello-gray-200 hover:bg-trello-gray-500 cursor-pointer rounded-full ml-1 p-1"
              data-testid="add-card-close"
              fill="none"
              height="36"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="36"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
